updated blockchain.info logo to be horizontal logo. fixed some spacing issues

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -91,10 +91,10 @@ div.col-sm-4.feature-panel.feat-block {padding-top:1px; padding-bottom:5px; marg
 .feature-action {background-color:rgba(83,32,111,1); color:rgba(255,255,255,1); text-align:center; padding-top:150px; padding-bottom:150px; margin:0;}
 h2.action-title {font-size:30px; line-height:42px; margin-bottom:35px;}
 .btn-wrap {max-width:400;}
-.wrap-mob-feat {max-width:195px;}
+.wrap-mob-feat {max-width:205px; padding:0;}
 .featpan-g1 {margin-top:10px;}
 .featpan-g2 {margin-top:10px;}
-.featpan-g3 {margin-top:0px;}
+.featpan-g3 {padding-top:20px;}
 .featpan-1 {padding-top:20px;}
 .featpan-2 {padding-top:20px;}
 .featpan-3 {padding-top:20px;}
@@ -177,7 +177,7 @@ footer > li {list-style:none;}
 	h3.banner-head {font-size:20px; font-weight:500; margin-top:13px;}
 	.featpan-g1 {margin-top:0px;}
 	.featpan-g2 {margin-top:42px;}
-	.featpan-g3 {margin-top:7px;}
+	.featpan-g3 {margin-top:46px; padding-top:0;}
 	.featpan-1 {margin-top:18px;}
 	.featpan-2 {margin-top:4px;}
 	.featpan-3 {margin-top:8px;}
